Fix scrollbar styling (#14)

--- a/client/containers/Main/_main.scss
+++ b/client/containers/Main/_main.scss
@@ -85,58 +85,46 @@
   }
 }
 
-.loading .client_container #msgs_scroller_div {
-  display : none;
-}
-
-#archive_msgs_scroller_div,
-#msgs_scroller_div {
+#msgs_div {
   overflow-y : auto;
   outline    : 0;
 }
 
-.supports_custom_scrollbar #archive_msgs_scroller_div,
-.supports_custom_scrollbar #msgs_scroller_div {
+.supports_custom_scrollbar #msgs_div {
   overflow-x   : hidden;
   overflow-y   : scroll;
   border-right : .25rem solid transparent;
 }
 
-.supports_custom_scrollbar #archive_msgs_scroller_div::-webkit-scrollbar,
-.supports_custom_scrollbar #msgs_scroller_div::-webkit-scrollbar {
+.supports_custom_scrollbar #msgs_div::-webkit-scrollbar {
   -webkit-appearance : none;
   position           : absolute;
   width              : 8px;
 }
 
-.supports_custom_scrollbar #archive_msgs_scroller_div::-webkit-scrollbar-thumb,
-.supports_custom_scrollbar #archive_msgs_scroller_div::-webkit-scrollbar-track,
-.supports_custom_scrollbar #msgs_scroller_div::-webkit-scrollbar-thumb,
-.supports_custom_scrollbar #msgs_scroller_div::-webkit-scrollbar-track {
+.supports_custom_scrollbar #msgs_div::-webkit-scrollbar-thumb,
+.supports_custom_scrollbar #msgs_div::-webkit-scrollbar-track {
   color           : #fff;
   border-radius   : 3px;
   background-clip : padding-box!important;
 }
 
-.supports_custom_scrollbar #archive_msgs_scroller_div::-webkit-scrollbar-track,
-.supports_custom_scrollbar #msgs_scroller_div::-webkit-scrollbar-track {
+.supports_custom_scrollbar #msgs_div::-webkit-scrollbar-track {
   background : #f3f3f3;
   box-shadow : inset 0 -4px 0 0,
                inset 0 4px 0 0;
 }
 
-.supports_custom_scrollbar #archive_msgs_scroller_div::-webkit-scrollbar-thumb,
-.supports_custom_scrollbar #msgs_scroller_div::-webkit-scrollbar-thumb {
+.supports_custom_scrollbar #msgs_div::-webkit-scrollbar-thumb {
   min-height : 36px;
-  background : #d9d9de;
+  background : $side-bar__background;
   box-shadow : inset 0 -2px,
                inset 0 -3px,
                inset 0 2px,
                inset 0 3px;
 }
 
-.supports_custom_scrollbar #archive_msgs_scroller_div::-webkit-scrollbar-corner,
-.supports_custom_scrollbar #msgs_scroller_div::-webkit-scrollbar-corner {
+.supports_custom_scrollbar #msgs_div::-webkit-scrollbar-corner {
   background : #fff;
 }
 
@@ -162,10 +150,6 @@
   left       : 0;
   height     : 26px;
   background : #fff;
-}
-
-.threads_view_is_showing #messages_container.has_top_messages_banner:before {
-  background : #f2f2f5;
 }
 
 #messages_container>.monkey_scroll_wrapper:not(#monkey_scroll_wrapper_for_unread_msgs_scroller_div)>.monkey_scroll_bar {
